# ph-data-challenge

./: README.md  docker-compose.yml  ph_data_challenge.html  ph_data_challenge.ipynb  pyproject.toml  requirements.txt
data/: hashed_customer_sessions.csv
