[tool.poetry]
name = "ph-data-challenge"
version = "0.1.0"
description = ""
authors = ["Anthony Khoudary <ankhoudary12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.2.9"
pandas = "^1.1.4"
numpy = "^1.19.4"
seaborn = "^0.11.0"
psycopg2-binary = "^2.8.6"
sqlalchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
